--- a/assets/selector.css
+++ b/assets/selector.css
@@ -107,3 +107,13 @@ p {
 	padding-right: 5px;
 	padding-left: 5px;
 }
+
+/* jacket */
+.jacket {
+  display: block;
+  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+
+  padding-bottom: 15px;
+}
